--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,8 +63,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-   - lib/images/
-  #   - images/a_dot_ham.jpeg
+    - lib/images/
+    - lib/fonts/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
@@ -77,6 +77,10 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
+  fonts:
+    - family: creepster
+      fonts:
+        - asset: fonts/Creepster-Regular.ttf
   # fonts:
   #   - family: Schyler
   #     fonts:
