:lipstick: creepText widget added

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,11 +60,11 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
   # To add assets to your application, add an assets section, like this:
   assets:
     - lib/images/
     - lib/fonts/
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
@@ -77,10 +77,10 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  fonts:
-    - family: creepster
-      fonts:
-        - asset: fonts/Creepster-Regular.ttf
+  # fonts:
+  #   - family: creepster
+  #     fonts:
+  #       - asset: fonts/Creepster-Regular.ttf
   # fonts:
   #   - family: Schyler
   #     fonts:
