--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ flutter:
   assets:
     - lib/images/
     - lib/fonts/
+    - lib/theme/
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
